roles/Infra/traefik-forward-auth/files/forward-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
  namespace: kube-system
  labels:
    app: traefik-forward-auth
spec:
  type: ClusterIP
  selector:
    app: traefik-forward-auth
  ports:
  - name: auth-http
    port: 80
    targetPort: 4181
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
  namespace: kube-system
  labels:
    app: traefik-forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-forward-auth
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: traefik-forward-auth
      annotations:
        container.apparmor.security.beta.kubernetes.io/traefik-forward-auth: runtime/default
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: traefik-forward-auth
        image: thomseddon/traefik-forward-auth:2
        imagePullPolicy: Always
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65534
          runAsGroup: 65534
          capabilities:
            drop:
              - ALL
        livenessProbe:
          failureThreshold: 3
          tcpSocket:
            port: 4181
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          limits:
            memory: '10Mi'
            cpu: '100m'
        ports:
        - name: http
          containerPort: 4181
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        configMap:
          name: traefik-forward-auth-config
      - name: traefik-forward-auth-secrets
        secret:
          secretName: traefik-forward-auth-secrets

# References:
# https://github.com/thomseddon/traefik-forward-auth
# https://github.com/thomseddon/traefik-forward-auth/issues/83
